--- a/cyber.html
+++ b/cyber.html
@@ -1,74 +1,10 @@
-# 👋 Hi, I'm Adan Lopez
-
-25 years in cybersecurity leadership | Aerospace and defense sectors | cybersecurity manager, PM and consultant
-
----
-
-## 📍 San Dimas, CA • 🇺🇸  
-📧 heyadanlopez@gmail.com  
-📱 (714) 240-4496  
-[LinkedIn](https://www.linkedin.com/in/adan-lopez-76947911/)
-
----
-
-## 🛡️ Certifications & Clearances
-- Secret / SAP Clearance
-- ICS2 CISSP
-- COMPTIA Security+
-- ICD-705 SAP / DoD Risk Management Framework (RMF)
-- Fluent in Spanish
-
----
-
-## 💼 Experience
-
-**IT Manager — Kirkhill, Inc. (2018–Present)**
-- Manage a team of 5 supporting DoD classified networks and GRC.
-- ISSM for DoD classified systems, program rescue, and ATO restoration.
-- Led $5M ERP migration to AWS GovCloud, delivered on time and under budget.
-
-**IT System Administrator — Hartwell (2010–2018)**
-- GRC lead, IT architecture/engineering, and help desk supervisor.
-- Oversaw supply chain risk management and coordinated incident response.
-
----
-
-## 🏆 Key Projects & Achievements
-
-- **Project Management:** Delivered major ERP migration, overcoming team turnover and COVID-19 disruptions.
-- **Cybersecurity Operations:** Developed and implemented NIST 800-53, NIST 800-30, CMMC, and HITRUST frameworks.
-- **Risk Management:** Reduced CMMC assessment scope and cost; mapped business dependencies to MITRE ATT&CK.
-- **Incident Response:** Led IR planning, threat hunting, and response for advanced persistent threats.
-- **SOC & MSSP Oversight:** Standardized security operations across 50+ companies.
-- **Cloud Security:** Hardened Azure IaaS/PaaS, M365, implemented SSO, RBAC, and advanced DLP.
-- **Vulnerability Management:** Integrated multi-layered VM strategy with Tenable Nessus, Bitsight EASM, and more.
-- **Industrial/Physical Security:** Reduced IIoT/IoT risks, improved segmentation, and managed access control systems.
-
----
-
-## 🧑‍💻 Technical Skills
-
-- Risk Management & Compliance (NIST, RMF, HITRUST, CMMC, DFARS, GDPR, SOX)
-- Security Architecture & Engineering (Network segmentation, AD, VMware, CIS Benchmarks)
-- Cloud Security (Azure, AWS GovCloud, M365)
-- Vulnerability & Incident Management (Nessus, Extrahop NDR, Defender for Cloud)
-- Supply Chain Security (SOC II, Bitsight EASM)
-- Industrial Security (IIoT/IoT, physical barriers, surveillance)
-- Fluent in Spanish
-
----
-
-## 🔗 Let’s Connect
-
-I’m open to collaboration, consulting, and sharing best practices in IT security, risk management, and cloud architecture.  
-Feel free to reach out via [email](mailto:heyadanlopez@gmail.com) or [LinkedIn](https://www.linkedin.com/in/adan-lopez-76947911/).
-
----
-
-## 🔗 Resume
-[GRC Resume](https://github.com/heyadanlopez-a11y/Resumes/blob/e839421cebf83ed9747ab363d13ca6d7f071ab58/Resume-Adan%20Lopez-GRC.pdf)
-
----
-
-_This profile is a concise summary. For full details, see my [resume](#)._ <!-- Replace # with actual resume link when available -->
-
+<!-- profiles/cyber.html -->
+<!doctype html><meta charset="utf-8">
+<title>Cybersecurity Profile – Your Name</title>
+<h1>Cybersecurity Profile</h1>
+<ul>
+  <li>TS/SCI-eligible | CMMC, NIST 800-171, RMF</li>
+  <li>ISSM/ISSO experience, SAP environment</li>
+  <li>Blue team: SOC design, vuln mgmt, IR</li>
+</ul>
+<a href="/">← Back</a>
