--- a/cyber.html
+++ b/cyber.html
@@ -1,73 +1,136 @@
-# 👋 Hi, I'm Adan Lopez
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Your Name – Cybersecurity Profile</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    :root {
+      --bg: #f9f9f9;
+      --text: #222;
+      --accent: #005bbb;
+      --card-bg: #fff;
+      --font: 'Segoe UI', Roboto, sans-serif;
+    }
+    body {
+      margin: 0;
+      font-family: var(--font);
+      background: var(--bg);
+      color: var(--text);
+      line-height: 1.6;
+    }
+    header {
+      background: var(--accent);
+      color: #fff;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
+    header p {
+      margin-top: 0.5rem;
+      font-size: 1rem;
+      opacity: 0.9;
+    }
+    main {
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+    section {
+      background: var(--card-bg);
+      padding: 1.5rem;
+      margin-bottom: 1.5rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+    }
+    section h2 {
+      margin-top: 0;
+      font-size: 1.3rem;
+      color: var(--accent);
+    }
+    ul {
+      list-style: none;
+      padding-left: 0;
+    }
+    ul li {
+      margin-bottom: 0.5rem;
+      padding-left: 1.2rem;
+      position: relative;
+    }
+    ul li::before {
+      content: "•";
+      color: var(--accent);
+      position: absolute;
+      left: 0;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.85rem;
+      color: #666;
+    }
+    a {
+      color: var(--accent);
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
 
-25 years in cybersecurity leadership | Aerospace and defense sectors | cybersecurity manager, PM and consultant
+  <header>
+    <h1>Your Name</h1>
+    <p>Cybersecurity Professional | GRC | CMMC | NIST 800-171</p>
+  </header>
 
----
+  <main>
+    <section>
+      <h2>About Me</h2>
+      <p>
+        Experienced cybersecurity analyst and compliance specialist with expertise in
+        NIST 800-171, CMMC, and risk management. Skilled in building security programs,
+        restoring compliance for classified systems, and aligning security strategy
+        with business needs.
+      </p>
+    </section>
 
-## 📍 San Dimas, CA • 🇺🇸  
-📧 heyadanlopez@gmail.com  
-📱 (714) 240-4496  
-[LinkedIn](https://www.linkedin.com/in/adan-lopez-76947911/)
+    <section>
+      <h2>Core Skills</h2>
+      <ul>
+        <li>Governance, Risk, and Compliance (CMMC, NIST, ISO)</li>
+        <li>Security Operations (SOC, vulnerability management, IR)</li>
+        <li>Privileged Access & Identity Management (Entra ID, AD)</li>
+        <li>System Security Planning & Assessment (SSPs, POA&Ms, AOs)</li>
+      </ul>
+    </section>
 
----
+    <section>
+      <h2>Notable Achievements</h2>
+      <ul>
+        <li>Restored classified SAP systems to compliance and regained USAF approval.</li>
+        <li>Secured ATOs by developing and implementing NIST 800-53 control sets.</li>
+        <li>Led security and risk assessments of advanced RF military testing platforms.</li>
+      </ul>
+    </section>
 
-## 🛡️ Certifications & Clearances
-- Secret / SAP Clearance
-- ICS2 CISSP
-- COMPTIA Security+
-- ICD-705 SAP / DoD Risk Management Framework (RMF)
-- Fluent in Spanish
+    <section>
+      <h2>Contact</h2>
+      <p>
+        📧 <a href="mailto:you@example.com">you@example.com</a><br>
+        🌐 <a href="https://linkedin.com/in/yourprofile">LinkedIn</a><br>
+        📄 <a href="index.html">Back to Portfolio</a>
+      </p>
+    </section>
+  </main>
 
----
+  <footer>
+    © 2025 Your Name – Cybersecurity Profile
+  </footer>
 
-## 💼 Experience
-
-**IT Manager — Kirkhill, Inc. (2018–Present)**
-- Manage a team of 5 supporting DoD classified networks and GRC.
-- ISSM for DoD classified systems, program rescue, and ATO restoration.
-- Led $5M ERP migration to AWS GovCloud, delivered on time and under budget.
-
-**IT System Administrator — Hartwell (2010–2018)**
-- GRC lead, IT architecture/engineering, and help desk supervisor.
-- Oversaw supply chain risk management and coordinated incident response.
-
----
-
-## 🏆 Key Projects & Achievements
-
-- **Project Management:** Delivered major ERP migration, overcoming team turnover and COVID-19 disruptions.
-- **Cybersecurity Operations:** Developed and implemented NIST 800-53, NIST 800-30, CMMC, and HITRUST frameworks.
-- **Risk Management:** Reduced CMMC assessment scope and cost; mapped business dependencies to MITRE ATT&CK.
-- **Incident Response:** Led IR planning, threat hunting, and response for advanced persistent threats.
-- **SOC & MSSP Oversight:** Standardized security operations across 50+ companies.
-- **Cloud Security:** Hardened Azure IaaS/PaaS, M365, implemented SSO, RBAC, and advanced DLP.
-- **Vulnerability Management:** Integrated multi-layered VM strategy with Tenable Nessus, Bitsight EASM, and more.
-- **Industrial/Physical Security:** Reduced IIoT/IoT risks, improved segmentation, and managed access control systems.
-
----
-
-## 🧑‍💻 Technical Skills
-
-- Risk Management & Compliance (NIST, RMF, HITRUST, CMMC, DFARS, GDPR, SOX)
-- Security Architecture & Engineering (Network segmentation, AD, VMware, CIS Benchmarks)
-- Cloud Security (Azure, AWS GovCloud, M365)
-- Vulnerability & Incident Management (Nessus, Extrahop NDR, Defender for Cloud)
-- Supply Chain Security (SOC II, Bitsight EASM)
-- Industrial Security (IIoT/IoT, physical barriers, surveillance)
-- Fluent in Spanish
-
----
-
-## 🔗 Let’s Connect
-
-I’m open to collaboration, consulting, and sharing best practices in IT security, risk management, and cloud architecture.  
-Feel free to reach out via [email](mailto:heyadanlopez@gmail.com) or [LinkedIn](https://www.linkedin.com/in/adan-lopez-76947911/).
-
----
-
-## 🔗 Resume
-[GRC Resume](https://github.com/heyadanlopez-a11y/Resumes/blob/e839421cebf83ed9747ab363d13ca6d7f071ab58/Resume-Adan%20Lopez-GRC.pdf)
-
----
-
-_This profile is a concise summary. For full details, see my [resume](#)._ <!-- Replace # with actual resume link when available -->
+</body>
+</html>
