--- a/cyber.html
+++ b/cyber.html
@@ -83,11 +83,12 @@
 </head>
 <body>
 
-  <header>
-    <h1>Your Name</h1>
-    <p>Cybersecurity Professional | GRC | CMMC | NIST 800-171</p>
-  </header>
-
+<header>
+  <img src="profile.jpg" alt="Your Name" style="width:140px;height:140px;border-radius:50%;object-fit:cover;border:4px solid #fff;box-shadow:0 2px 6px rgba(0,0,0,0.2);">
+  <h1>Your Name</h1>
+  <p>Cybersecurity Professional | GRC | CMMC | NIST 800-171</p>
+</header>
+  
   <main>
     <section>
       <h2>About Me</h2>
