--- a/cyber.html
+++ b/cyber.html
@@ -84,7 +84,7 @@
 <body>
 
 <header>
-  <img src="profile.jpg" alt="Your Name" style="width:140px;height:140px;border-radius:50%;object-fit:cover;border:4px solid #fff;box-shadow:0 2px 6px rgba(0,0,0,0.2);">
+  <img src="pic-profile1.jpg" alt="Your Name" style="width:140px;height:140px;border-radius:50%;object-fit:cover;border:4px solid #fff;box-shadow:0 2px 6px rgba(0,0,0,0.2);">
   <h1>Your Name</h1>
   <p>Cybersecurity Professional | GRC | CMMC | NIST 800-171</p>
 </header>
