--- a/riskassess-entra-sso-saml.html
+++ b/riskassess-entra-sso-saml.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Your Name – Cybersecurity Profile</title>
+  <title>Adan Lopez – Risk Assessment: SAML Single-Signon in Entra ID</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     :root {
@@ -85,18 +85,16 @@
 
 <header>
   <img src="pic-profile1.jpg" alt="Your Name" style="width:140px;height:140px;border-radius:50%;object-fit:cover;border:4px solid #fff;box-shadow:0 2px 6px rgba(0,0,0,0.2);">
-  <h1>Your Name</h1>
-  <p>Cybersecurity Professional | GRC | CMMC | NIST 800-171</p>
+  <h1>Adan Lopez</h1>
+  <p>Cybersecurity | Governance | Risk | CISSP</p>
 </header>
   
   <main>
     <section>
       <h2>About Me</h2>
       <p>
-        Experienced cybersecurity analyst and compliance specialist with expertise in
-        NIST 800-171, CMMC, and risk management. Skilled in building security programs,
-        restoring compliance for classified systems, and aligning security strategy
-        with business needs.
+        A brief exercise to assess the risks of creating an Enterprise App in your Entra 
+        tenant to enable SAML-based single sign-on to access your Security MSP's portal. 
       </p>
     </section>
 
