--- a/riskassess-entra-sso-saml.html
+++ b/riskassess-entra-sso-saml.html
@@ -91,7 +91,7 @@
   
   <main>
     <section>
-      <h2>About Me</h2>
+      <h2>Assessing Risk in Entra Single Sign-on using SAML</h2>
       <p>
         A brief exercise to assess the risks of creating an Enterprise App in your Entra 
         tenant to enable SAML-based single sign-on to access your Security MSP's portal. 
