--- a/riskassess-entra-sso-saml.html
+++ b/riskassess-entra-sso-saml.html
@@ -95,6 +95,9 @@
       <p>
         A brief exercise to assess the risks of creating an Enterprise App in your Entra 
         tenant to enable SAML-based single sign-on to access your Security MSP's portal. 
+              <p>
+        A brief exercise to assess the risks of creating an Enterprise App in your Entra 
+        tenant to enable SAML-based single sign-on to access your Security MSP's portal. 
       </p>
     </section>
 
