--- a/riskassess-entra-sso-saml.html
+++ b/riskassess-entra-sso-saml.html
@@ -96,8 +96,7 @@
         A brief exercise to assess the risks of creating an Enterprise App in your Entra 
         tenant to enable SAML-based single sign-on to access your Security MSP's portal. 
               <p>
-        A brief exercise to assess the risks of creating an Enterprise App in your Entra 
-        tenant to enable SAML-based single sign-on to access your Security MSP's portal. 
+You have a new MSP who will be providing various security services to your organization like log management, EDR management, and vulnerability management. The MSP has a ticketing portal where you will submit tickets for support when needed, and they are helping you to configure access to the portal. The portal will be accessed using your normal company login and password, by enable SAML-based single sign-on between your Microsoft Entra tenant and the MSP’s Entra tenant. To do this, you will configure         tenant to enable SAML-based single sign-on to access your Security MSP's portal. 
       </p>
     </section>
 
