--- a/riskassess-entra-sso-saml.html
+++ b/riskassess-entra-sso-saml.html
@@ -96,7 +96,21 @@
         A brief exercise to assess the risks of creating an Enterprise App in your Entra 
         tenant to enable SAML-based single sign-on to access your Security MSP's portal. 
               <p>
-You have a new MSP who will be providing various security services to your organization like log management, EDR management, and vulnerability management. The MSP has a ticketing portal where you will submit tickets for support when needed, and they are helping you to configure access to the portal. The portal will be accessed using your normal company login and password, by enable SAML-based single sign-on between your Microsoft Entra tenant and the MSP’s Entra tenant. To do this, you will configure         tenant to enable SAML-based single sign-on to access your Security MSP's portal. 
+                Scenario
+              <p>
+You have a new MSP who will be providing various security services to your
+organization like log management, EDR management, and vulnerability 
+management. The MSP has a ticketing portal where you will submit tickets
+ for support when needed, and they are helping you to configure access to
+ the portal. The portal will be accessed using your normal company login and
+ password, by enabling SAML-based single sign-on between your Microsoft 
+Entra tenant and the MSP’s Entra tenant. 
+              <p>
+                This risk assessment evaluates the security posture of the SAML Single Sign-On (SSO)
+implementation using Microsoft Entra (Azure AD) Enterprise Application as the Identity
+Provider (IdP) for access to the MSP portal. SAML SSO facilitates seamless and secure
+authentication by federating identity between the client organization and the MSP, 
+enabling users to leverage existing credentials without maintaining multiple passwords.
       </p>
     </section>
 
