--- a/riskassess-entra-sso-saml.html
+++ b/riskassess-entra-sso-saml.html
@@ -118,24 +118,22 @@
 </section>
 
 
-    <section>
-      <h2>RISK ASSSESSMENT</h2>
-      <ul>
-        <li>Governance, Risk, and Compliance (CMMC, NIST, ISO)</li>
-        <li>Security Operations (SOC, vulnerability management, IR)</li>
-        <li>Privileged Access & Identity Management (Entra ID, AD)</li>
-        <li>System Security Planning & Assessment (SSPs, POA&Ms, AOs)</li>
-      </ul>
-    </section>
+<section>
+  <h2>Assumptions</h2>
+  <p>The MSP portal will host a ticketing system containing sensitive security data about the
+  client environment, including incident reports, vulnerability details, and configuration
+  information.</p>
+  <p>The ticketing system will be accessible only through the SAML SSO integration using
+  Microsoft Entra Enterprise App as the Identity Provider.</p>
+  <p>Multi-factor authentication will be enabled on the IdP to enhance user verification.</p>
+</section>
 
-    <section>
-      <h2>Notable Achievements</h2>
-      <ul>
-        <li>Restored classified SAP systems to compliance and regained USAF approval.</li>
-        <li>Secured ATOs by developing and implementing NIST 800-53 control sets.</li>
-        <li>Led security and risk assessments of advanced RF military testing platforms.</li>
-      </ul>
-    </section>
+
+<section>
+  <h2>Risk Analysis</h2>
+  <img src="risk_analysis_table.png" alt="Risk Analysis Table" style="max-width:100%; height:auto; border-radius:8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+</section>
+
 
     <section>
       <h2>Contact</h2>
