--- a/riskassess-entra-sso-saml.html
+++ b/riskassess-entra-sso-saml.html
@@ -120,13 +120,13 @@
 
 <section>
   <h2>Assumptions</h2>
-  <p>The MSP portal will host a ticketing system containing sensitive security data about the
-  client environment, including incident reports, vulnerability details, and configuration
-  information.</p>
-  <p>The ticketing system will be accessible only through the SAML SSO integration using
-  Microsoft Entra Enterprise App as the Identity Provider.</p>
-  <p>Multi-factor authentication will be enabled on the IdP to enhance user verification.</p>
+  <ul>
+    <li>The MSP portal will host a ticketing system containing sensitive security data about the client environment, including incident reports, vulnerability details, and configuration information.</li>
+    <li>The ticketing system will be accessible only through the SAML SSO integration using Microsoft Entra Enterprise App as the Identity Provider.</li>
+    <li>Multi-factor authentication will be enabled on the IdP to enhance user verification.</li>
+  </ul>
 </section>
+
 
 
 <section>
