--- a/riskassess-entra-sso-saml.html
+++ b/riskassess-entra-sso-saml.html
@@ -135,6 +135,23 @@
 </section>
 
 
+<section>
+  <h2>Risk Mitigation</h2>
+  <img src="risk_mitigation_table.png" alt="Risk Mitigation Table" style="max-width:100%; height:auto; border-radius:8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+</section>
+
+<section>
+  <h2>Conclusion</h2>
+  <p>
+    This risk assessment has examined the security implications of implementing SAML-based Single Sign-On using Microsoft Entra Enterprise Application for access to the MSP portal. 
+    The analysis highlights that while there are inherent risks—such as assertion replay attacks, unauthorized access, and data interception—these can be effectively mitigated through best practices 
+    including strict SAML configuration, use of multi-factor authentication, secure certificate management, and least privilege access control.
+  </p>
+  <p>
+    By adhering to these measures, the client organization can maintain a strong security posture, confidently leveraging SSO to facilitate seamless, secure access without compromising sensitive security data hosted in the MSP portal. Continuous monitoring and periodic reassessment will further ensure evolving threats are managed proactively.
+  </p>
+</section>
+    
     <section>
       <h2>Contact</h2>
       <p>
