--- a/cyber.html
+++ b/cyber.html
@@ -119,6 +119,15 @@
       </ul>
     </section>
 
+<section>
+  <h2>Projects</h2>
+  <ul>
+    <li><a href="https://heyadanlopez-a11y.github.io/profiles/riskassess-entra-sso-saml.html">SAML Single Sign-On Risk Assessment for MSP Portal</a></li>
+    <!-- Add more projects below as needed -->
+  </ul>
+</section>
+
+    
     <section>
       <h2>Contact</h2>
       <p>
