--- a/risk-assessment-entra-sso.html
+++ b/risk-assessment-entra-sso.html
@@ -68,14 +68,14 @@
       border-radius: var(--radius);
       box-shadow: 0 2px 6px var(--shadow);
     }
-    section h2 {
-      font-weight: 600;
-      font-size: 1.25rem;
-      margin-bottom: 1rem;
-      color: var(--accent);
-      border-bottom: 2px solid var(--accent);
-      padding-bottom: 0.3rem;
-    }
+section h2 {
+  font-weight: 600;
+  font-size: 1.1rem;
+  margin-bottom: 1rem;
+  color: #444; /* toned-down dark gray */
+  border: none;
+  padding-bottom: 0;
+}
     p, ul {
       font-size: 1rem;
       color: var(--text);
