--- a/risk-assessment-entra-sso.html
+++ b/risk-assessment-entra-sso.html
@@ -151,6 +151,12 @@ section h2 {
       enabling users to leverage existing credentials without maintaining multiple passwords.
     </p>
   </section>
+
+  <section>
+    <h2>Risk Analysis</h2>
+    <img src="diagram_entra_saml.png" alt="Risk Analysis Table">
+  </section>
+  
   <section>
     <h2>Assumptions</h2>
     <ul>
