--- a/risk-assessment-entra-sso.html
+++ b/risk-assessment-entra-sso.html
@@ -153,8 +153,11 @@ section h2 {
   </section>
 
   <section>
-    <h2>Risk Analysis</h2>
-    <img src="diagram_entra_saml.png" alt="Risk Analysis Table">
+    <h2>Solution Architecture</h2>
+    <p>
+      A simple diagram helps visualize the basic components. (thanks ChatGPT!)
+    </p>
+    <img src="diagram_entra_saml.png" alt="Diagram Entra SAML">
   </section>
   
   <section>
