--- a/risk-assessment-entra-sso.html
+++ b/risk-assessment-entra-sso.html
@@ -174,6 +174,10 @@ section h2 {
   </section>
   <section>
     <h2>Risk Mitigation</h2>
+  </p>
+    After analyzing the risks, and assigning scores that makes sense, various mitigations are provided to help minimize the risks identified. Here, the mitigations
+    are mapped to CMMC controls, since the client in this scenario contracts with the federal government, and appreciates the added insight into how these align to
+    the frameworks they rely on. The mitigations are also numbered where appropriate to easily map back to the risk identified in the previous section. 
     <img src="risk_mitigation_table.png" alt="Risk Mitigation Table">
   </section>
   <section>
