--- a/risk-assessment-entra-sso.html
+++ b/risk-assessment-entra-sso.html
@@ -170,6 +170,11 @@ section h2 {
   </section>
   <section>
     <h2>Risk Analysis</h2>
+  </p> 
+    A simple risk analysis is conducted. It's helpful to provide links here to sources to make it easy on the Change Control Board reviewing and approving the connection. 
+    Here's a few I found helpful:
+    href="https://www.vaadata.com/blog/saml-how-it-works-vulnerabilities-and-common-attacks/">SAML: How it Works, Vulnerabilities and Common Attacks
+    href="https://cheatsheetseries.owasp.org/cheatsheets/SAML_Security_Cheat_Sheet.html">SAML Security Cheat Sheet
     <img src="risk_analysis_table.png" alt="Risk Analysis Table">
   </section>
   <section>
