--- a/risk-assessment-entra-sso.html
+++ b/risk-assessment-entra-sso.html
@@ -174,8 +174,10 @@ section h2 {
     A simple risk analysis is conducted. It's helpful to provide links here to sources to make it easy on the Change Control Board reviewing and approving the connection. 
       </p> 
     Here's a few I found helpful:
-    href="https://www.vaadata.com/blog/saml-how-it-works-vulnerabilities-and-common-attacks/">SAML: How it Works, Vulnerabilities and Common Attacks
-    href="https://cheatsheetseries.owasp.org/cheatsheets/SAML_Security_Cheat_Sheet.html">SAML Security Cheat Sheet
+          </p> 
+        <li><a href="https://heyadanlopez-a11y.github.io/profiles/riskassess-entra-sso-saml.html">SAML Single Sign-On Risk Assessment for MSP Portal</a></li>
+     <li><a href="https://www.vaadata.com/blog/saml-how-it-works-vulnerabilities-and-common-attacks/">SAML: How it Works, Vulnerabilities and Common Attacks</a></li>
+    <li><a href="https://cheatsheetseries.owasp.org/cheatsheets/SAML_Security_Cheat_Sheet.html">SAML Security Cheat Sheet</a></li>
     <img src="risk_analysis_table.png" alt="Risk Analysis Table">
   </section>
   <section>
