--- a/risk-assessment-ai-internal.html
+++ b/risk-assessment-ai-internal.html
@@ -146,7 +146,7 @@
     <h2>Scope</h2>
     <p>This assessment explores private AI models restricted to internal employees and strictly controlled data access. It considers relatively safe uses like email, document processing, and knowledgebase queries while avoiding the higher risks of public or autonomous AI.</p>
     <ul>
-      <li>AI scenarios considered in this assessment:
+         <p>AI scenarios considered in this assessment:</p>
         <ul>
           <li>AI “assistant” built into Office applications to help draft documents or emails or generate formulas in Excel (i.e. Microsoft Copilot).</li>
           <li>AI-Powered Search & Summarization: Private AI chatbot connected to internal knowledgebases such as customer history, QMS and SOP document libraries, IT support knowledgebase, or HR information libraries. ChatGPT Enterprise and Microsoft Copilot Studio are popular examples. (RAG AI)</li>
