--- a/risk-assessment-ai-internal.html
+++ b/risk-assessment-ai-internal.html
@@ -155,7 +155,7 @@
           <li>AI restricted from taking actions or committing changes (always a “human in the loop”)</li>
         </ul>
       </li>
-      <li>Scenarios not considered:
+      <p>Scenarios not considered in this assessment:</p>
         <ul>
           <li>Use of unmanaged, publicly available AI models (“Shadow AI”)</li>
           <li>Private AI models with unrestricted access to the internet, network, or data</li>
