--- a/risk-assessment-ai-internal.html
+++ b/risk-assessment-ai-internal.html
@@ -179,7 +179,7 @@
     <p>The purpose of this assessment is to inform company leaders, who may be considering AI adoption, but want a general awareness of the types of risks involved before initiating a more thorough assessment specific to their business. This report is not intended to be an exhaustive report of all AI-related risks, but rather a general idea of risks likely to arise given a specific, limited set of use cases (see “Scope” section”. Investment decisions or detailed mitigation plans may require further due diligence.</p>
     <p><strong>Risk score: MODERATE</strong></p>
     <p>The highest risk items are listed below. All other threats were scored ‘Low’ risk (see “Risk Analysis” section). It’s important to note that the risk scores assume that reasonable and appropriate measures are taken to prevent major cyber-attacks, unauthorized access, or leakage of sensitive or controlled data (see “Risk Mitigation” section).</p>
-    <img src="risk_analysis_table.png" alt="Executive Risk Analysis">
+    <img src="ai_risk_analysis_table.png" alt="Executive Risk Analysis">
   </section>
 
   <section>
