--- a/cyber.html
+++ b/cyber.html
@@ -123,6 +123,7 @@
   <h2>Projects</h2>
   <ul>
     <li><a href="https://heyadanlopez-a11y.github.io/profiles/riskassess-entra-sso-saml.html">SAML Single Sign-On Risk Assessment for MSP Portal</a></li>
+    <li><a href="https://heyadanlopez-a11y.github.io/profiles/risk-assessment-ai-internal.html">Risks of Private Generative AI In the Business</a></li>
     <!-- Add more projects below as needed -->
   </ul>
 </section>
