--- a/risk-assessment-ai-internal.html
+++ b/risk-assessment-ai-internal.html
@@ -130,6 +130,10 @@
 </header>
 <main>
   <section>
+  <h2>Understanding Risks Associated with Introduction of Private GenAI Tools in the Business</h2>
+    </section>
+
+    <section>
     <h2>Introduction</h2>
     <p>
       Organizations are eager to gain competitive advantage from AI tools, driven by promises of efficiency, automation, and new business insights from data. AI is increasingly seen as a way of reducing costs, accelerating decision-making, improving customer experience, and unlocking new revenue streams. This creates strong incentives to deploy AI quickly, often ahead of establishing mature security practices.
