--- a/risk-assessment-ai-internal.html
+++ b/risk-assessment-ai-internal.html
@@ -126,7 +126,7 @@
 <header>
   <img src="pic-profile1.jpg" alt="Adan Lopez">
   <h1>Adan Lopez</h1>
-  <p>Cybersecurity | Governance | Risk | CISSP</p>
+  <p>Cybersecurity | Governance | Risk</p>
 </header>
 <main>
   <section>
@@ -159,6 +159,7 @@
           <li>AI restricted from taking actions or committing changes (always a “human in the loop”)</li>
         </ul>
       </li>
+       <p>
       <p>Scenarios not considered in this assessment:</p>
         <ul>
           <li>Use of unmanaged, publicly available AI models (“Shadow AI”)</li>
