--- a/aup_acceptable_use_policy.html
+++ b/aup_acceptable_use_policy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Email Hunting and Remediation</title>
+  <title>NEW_TITLE_HERE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     :root {
@@ -32,6 +32,15 @@
       padding: 2rem 1rem 1rem 1rem;
       text-align: center;
       border-bottom: 1px solid var(--border-color);
+    }
+    header img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid var(--accent);
+      box-shadow: 0 4px 8px var(--shadow);
+      margin-bottom: 0.5rem;
     }
     header h1 {
       margin: 0.3rem 0 0 0;
@@ -86,6 +95,13 @@
       margin-bottom: 0.6rem;
       padding-left: 0;
     }
+    img {
+      max-width: 100%;
+      height: auto;
+      border-radius: var(--radius);
+      box-shadow: 0 4px 12px var(--shadow);
+      margin-top: 10px;
+    }
     a {
       color: var(--accent);
       text-decoration: none;
@@ -108,74 +124,55 @@
 </head>
 <body>
 <header>
-  <h1>Email Hunting and Remediation</h1>
-  <p>Incident Response | Email Security</p>
+  <img src="pic-profile1.jpg" alt="Adan Lopez">
+  <h1>Adan Lopez</h1>
+  <p>Cybersecurity | Governance | Risk</p>
 </header>
 <main>
+
+
+-----------------------------------------------------------TEMPLATE-----------------------------------------------
   <section>
-    <h2>Emails Which Require Escalation</h2>
-    <p>This section explains when it is necessary to involve the security team regarding a suspicious email. While waiting for security team to engage, Kirkhill team should begin basic email investigation to gather more information (see “Email Investigation” section).</p>
-    <p>If you respond ‘yes’ to any of the following, contact the security team and begin immediate ‘Hunt and Kill’ procedure:</p>
-    <ol>
-      <li>Suspicious email received by more than one employee.</li>
-      <li>Message contains a known threat.</li>
-    </ol>
-    <p>If you respond ‘yes’ to any of the following, contact the security team for guidance:</p>
-    <ol>
-      <li>Did the user click or open a link or attachment which appears suspicious or risky?</li>
-      <li>Does the email appear expertly-crafted, or involve “inside information” such as:
+  <h2>NEW_TITLE_HERE</h2>
+    </section>
+
+    <section>
+    <h2>FIRST_SECTION_HEADER</h2>
+    <p>
+      TEXT_HERE
+    </p>
+    <p>
+      TEXT_HERE
+    </p>
+    <img src="picture.png" alt="DESCRIPTION_OF_PICTURE">
+  </section>
+
+  <section>
+    <h2>SECOND_SECTION_HEADER</h2>
+    <p>
+      TEXT_HERE
+    </p>
         <ul>
-          <li>Refer to actual current discussions/threads?</li>
-          <li>Include convincing and accurate signature blocks?</li>
-          <li>Refer to valid Kirkhill customers, orders, vendors, part numbers, etc.?</li>
-          <li>Utilize proper logos or company branding of Kirkhill or a Kirkhill contact?</li>
+          <li>BULLET_TEXT_HERE.</li>
+          <li>BULLET_TEXT_HERE.</li>
+          <li>BULLET_TEXT_HERE.</li>
         </ul>
       </li>
-      <li>Did the sender seem to know the victim’s job role and exactly the kind of request which this employee would normally handle?</li>
-      <li>Did the sender spoof or impersonate a Kirkhill employee’s internal @kirkhill.com address even though the message appears to come from someone outside the organization?</li>
-      <li>Did the sender impersonate a valid, high-ranking employee in an attempt to trick a lower-level employee into divulging information or performing a sensitive transaction? (whale-phishing)</li>
-      <li>Did the email execute some kind of suspicious action or command without the user having to click on any link or attachment?</li>
-      <li>Did the email contain some suspicious or dangerous link or attachment which appears to have been received by more than one Kirkhill employee?</li>
-      <li>Did the employee notice any strange messages or behavior around the time that they opened the email message, link, or attachment?</li>
-      <li>Did any other employees report suspicious emails which appear to have similar tactics or appearance?</li>
-    </ol>
+    <img src="picture.png" alt="DESCRIPTION_OF_PICTURE">
   </section>
-  <section>
-    <h2>Analyzing Email Headers</h2>
-    <p>The following tool facilitates analysis of email headers.</p>
-    <p><a href="https://mha.azurewebsites.net/pages/mha.html" target="_blank" rel="noopener noreferrer">https://mha.azurewebsites.net/pages/mha.html</a></p>
-    <p>Header can be retrieved here:</p>
-  </section>
-  <section>
-    <h2>Email Investigation</h2>
-    <p>Emails which appear particularly dangerous or risky should be investigated. Use Defender ‘Explorer’ to try and answer these questions:</p>
-    <ol>
-      <li>Are there more emails in the organization connected to this same message?</li>
-      <li>Other emails from the same email address?</li>
-      <li>Other emails from the same IP address?</li>
-      <li>Other emails with the same subject line (different sender)?</li>
-      <li>Does Defender ‘Investigations’ show other emails related to this message?</li>
-    </ol>
-    <p><strong>Tips for Defender ‘Explorer’</strong></p>
-  </section>
-  <section>
-    <h2>Hunt and Kill Email in Explorer</h2>
-    <p>Open Defender and go to Email and Collaboration to hunt for a message in Explorer.</p>
-  </section>
-  <section>
-    <h2>Hunt and Kill Email in Alerts</h2>
-  </section>
-  <section>
-    <h2>Block/Allow Email (Whitelist/Blacklist)</h2>
-    <p>Alternate Method</p>
-  </section>
-  <section>
-    <h2>Diagnose Quarantined or Failed Email</h2>
+
+------------------------END TEMPLATE--------------------------------------------------------------
+
+    <h2>Contact</h2>
+    <p> 
+      📧 <a href="mailto:heyadanlopez@gmail.com">heyadanlopez@gmail.com</a><br>
+      🌐 <a href="https://linkedin.com/in/yourprofile">LinkedIn</a><br>
+      📄 <a href="cyber.html">Back to Portfolio</a>
+    </p>
   </section>
 </main>
 <footer>
-  © 2025 Kirkhill Cybersecurity Team
+  © 2025 Adan Lopez – Cybersecurity Profile
 </footer>
 </body>
 </html>
-
